kclvm/query/src/snapshots/kclvm_query__tests__list_variables-17.snap
---
source: query/src/tests.rs
expression: got_json
---
{
  "sha.name": [
    {
      "name": "name",
      "type_name": "",
      "op_sym": ":",
      "value": "\"Hello\"",
      "list_items": [],
      "dict_entries": []
    }
  ]
}
