kclvm/query/src/snapshots/kclvm_query__tests__list_variables-18.snap
---
source: query/src/tests.rs
expression: got_json
---
{
  "sha.ids": [
    {
      "name": "ids",
      "type_name": "",
      "op_sym": ":",
      "value": "[\n    1\n    2\n    3\n]",
      "list_items": [
        {
          "name": "",
          "type_name": "",
          "op_sym": "",
          "value": "1",
          "list_items": [],
          "dict_entries": []
        },
        {
          "name": "",
          "type_name": "",
          "op_sym": "",
          "value": "2",
          "list_items": [],
          "dict_entries": []
        },
        {
          "name": "",
          "type_name": "",
          "op_sym": "",
          "value": "3",
          "list_items": [],
          "dict_entries": []
        }
      ],
      "dict_entries": []
    }
  ]
}
