kclvm/query/src/snapshots/kclvm_query__tests__list_variables-4.snap
---
source: query/src/tests.rs
expression: got_json
---
{
  "b1": [
    {
      "name": "b1",
      "type_name": "",
      "op_sym": "=",
      "value": "True",
      "list_items": [],
      "dict_entries": []
    }
  ]
}
